--- a/tasks/pre-requisites.yml
+++ b/tasks/pre-requisites.yml
@@ -4,7 +4,7 @@
 
 - name: "AWS | ECS | Check EC2 SSH key has been defined"
   fail: msg="You must specify the name of the SSH key you want to assign to the EC2 instances, e.g. my-ssh-key"
-  when: key_name is undefined
+  when: key_name is undefined and ecs_state == "present"
 
 - name: "AWS | ECS | Check EC2 security groups have been defined"
   fail: msg="You must specify a list of existing EC2 security groups IDs to apply to the auto-scaling EC2 instances"
