--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,7 @@
 galaxy_info:
-  author: Daniel Rhoades
+  author:
+    - Daniel Rhoades
+    - Elijah DeLee @kdelee
   description: Ansible role for simplifying the provisioning and decommissioning of Auto-Scaling ECS clusters within an AWS account
   license: MIT
   min_ansible_version: 2.1
