--- a/tasks/pre-requisites.yml
+++ b/tasks/pre-requisites.yml
@@ -25,3 +25,26 @@
 - name: "AWS | EC2 | Check EC2 Auto-Scaling Group name has been defined"
   fail: msg="You must specify the name of the launch configuration cluster, e.g. my-lc"
   when: ec2_asg_name is undefined
+
+- name: "AWS | IAM | Check that default role for ECS is in place if none specified"
+  iam_role:
+    name: "{{ ecs_instance_profile_name }}"
+    assume_role_policy_document:
+      Version: '2012-10-17'
+      Statement:
+      - Action: sts:AssumeRole
+        Effect: Allow
+        Principal:
+          Service: "ec2.amazonaws.com"
+    managed_policy:
+      - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
+  when: ecs_instance_profile_name == "ecsInstanceRole"
+  register: role_creation_result
+
+- name: "Print out result of role creation"
+  debug:
+    msg: "{{ role_creation_result }}"
+
+    #- name: "Update name of role for ECS"
+    #set_fact:
+    #ecs_instance_profile_name: "{{ role_creation_result.arn }}"
